logs/Slang/chapter-8/8.16--cast_func.sv.log
name: cast_func
description: $cast function test
should_fail: 0
tags: 8.16
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.16--cast_func.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.16--cast_func.sv:11:7: error: use of undeclared identifier '$cast'
		if(!$cast(val, 5))
		    ^~~~~
